--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5624,9 +5624,20 @@ button.close {
     display: none !important; } }
 .row {
   margin-top: 20px;
-  margin-botton: 20px; }
+  margin-bottom: 20px; }
 
 .display {
   margin-top: 20px; }
+
+.footer {
+  width: 100%;
+  background-color: grey;
+  color: #CACACA;
+  margin-top: 5%; }
+
+.redes-footer img {
+  float: left;
+  width: 20%;
+  padding: 0 1%; }
 
 /*# sourceMappingURL=main.css.map */
