--- a/stylesheets/views/_home.scss
+++ b/stylesheets/views/_home.scss
@@ -1,7 +1,21 @@
 .row {
 	margin-top: 20px;
-	margin-botton:20px;
+	margin-bottom:20px;
 } 
 .display{
 	margin-top:20px;
+}
+
+.footer{
+	width: 100%;
+	background-color: grey;
+	color: #CACACA;
+	margin-top:5%;
+}
+
+.redes-footer img{
+	float: left;
+	width: 20%;
+	padding: 0 1%;
+
 }
