--- a/stylesheets/views/_home.scss
+++ b/stylesheets/views/_home.scss
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: Handlee-Regular;
+    src: url(../tipografia/Handlee-Regular.ttf);
+}
+
+.navbar {
+	margin-bottom:0;
+	position: fixed;
+	width: 100%;
+	z-index: 10;
+	border-radius: 0;
+}
+
+.logo img{
+	width: 15%;
+}
+
+.carousel{
+	z-index: 9
+}
+
 .row {
 	margin-top: 20px;
 	margin-bottom:20px;
@@ -17,5 +38,27 @@
 	float: left;
 	width: 20%;
 	padding: 0 1%;
+}
 
+h3{
+	font-family:"Handlee-Regular";
+	color: rgb(215, 20, 62);
+	text-align: center;
+}
+
+p{
+	font-family:"Handlee-Regular";
+	color: grey;
+	text-align:center;
+	font-size: 17px;
+}
+
+.carousel-control {
+	.glyphicon-menu-right, .glyphicon-menu-left {
+	  font-size: 30px;
+	  position: absolute;
+	  top: 50%;
+	  z-index: 5;
+	  display: inline-block;
+	}
 }
