agregue overlay a las imagenes de las filas

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5674,4 +5674,17 @@ p {
   z-index: 5;
   display: inline-block; }
 
+.display {
+  position: relative;
+  width: 100%; }
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  top: 0%;
+  min-height: 100%; }
+
+.overlay:hover {
+  background-color: rgba(161, 179, 67, 0.5); }
+
 /*# sourceMappingURL=main.css.map */
