coloque imagenes a la segunda fila del gridsystem

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5623,6 +5623,10 @@ button.close {
   .hidden-print {
     display: none !important; } }
 .row {
+  margin-top: 20px;
+  margin-botton: 20px; }
+
+.display {
   margin-top: 20px; }
 
 /*# sourceMappingURL=main.css.map */
