cambio de color de hover

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5674,7 +5674,8 @@ h3 {
   min-height: 100%; }
 
 .overlay:hover {
-  background-color: rgba(161, 179, 67, 0.5); }
+  background-color: rgba(13, 13, 13, 0.54);
+  transition: 1s; }
 
 .piepagina {
   background-color: #ccc;
@@ -5684,8 +5685,6 @@ h3 {
 .gridpie {
   margin: 0 10%; }
   .gridpie h5 {
-    color: grey; }
-  .gridpie h4 {
     color: grey; }
   .gridpie p {
     color: grey;
