--- a/stylesheets/views/_home.scss
+++ b/stylesheets/views/_home.scss
@@ -74,3 +74,25 @@ p{
   min-height: 100%; }
   .overlay:hover {
     background-color: rgba(161, 179, 67, 0.5); }
+
+.piepagina{
+	background-color: #ccc;
+	padding: 1.5% 0;
+}
+
+
+.gridpie{
+	margin: 0 10%;
+	p{
+		font-size: 9px;
+		margin-top: 1%;
+		margin-bottom: 5%;
+	}
+	img{
+		width: 15%;
+	}
+}
+
+.text-center{
+	text-align:center;
+}
